# hwapi

./: .gitignore  Cargo.toml  README.md  input.csv
.github/workflows/: release.yml  rust.yml
databases/: Cargo.toml  build.rs
databases/benches/: cpu_amd.rs  cpu_intel.rs  pcie.rs  usb.rs
databases/src/: lib.rs  pcie.rs  usb.rs
databases/src/bugcheck/: mod.rs
databases/src/cpu/: mod.rs
handlers/: Cargo.toml
handlers/src/: lib.rs
parsing/: Cargo.toml
parsing/src/: cpu.rs  lib.rs
parsing/src/bugcheck/: mod.rs
parsing/src/cpu/amd/: input.csv  input.json  lexer.rs  mod.rs  parser.rs
parsing/src/cpu/intel/: lexer.rs  mod.rs  parser.rs
parsing/src/cpu/intel/chunks/: 1.csv  10.csv  11.csv  13.csv  14.csv  15.csv  16.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
parsing/src/pcie/: mod.rs
parsing/src/usb/: mod.rs
server/: Cargo.toml  build.rs
server/benches/: cpu_amd.rs  pcie.rs  usb.rs
server/src/: main.rs
server/src/cpu/: mod.rs
server/src/handlers/: mod.rs
src/: cpu.rs  main.rs
src/amd/: mod.rs
src/cpu/amd/: mod.rs
src/cpu/intel/: input.csv  lexer.rs  mod.rs  parser.rs
src/cpu/intel/chunks/: 1.csv  12.csv  2.csv  3.csv  4.csv  5.csv  6.csv
src/intel/: lexer.rs  mod.rs  parser.rs
src/pcie/: mod.rs
src/usb/: mod.rs
