[package]
name = "hwapi"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = "0.4.32"
clap = { version = "4.0", features = ["derive"] }
colored = "2.1.0"
levenshtein = "1.0.5"
log = "0.4.20"
nom = "7.1.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
