[package]
name = "databases"
version = "0.1.0"
edition = "2021"

[build-dependencies]
parsing = { path = "../parsing" }
phf_codegen = "0.11.3"

[dependencies]
parsing = { path = "../parsing" }
chrono = "0.4.40"
nom = "7.1.3"
serde = { version = "1.0.210", features = ["derive"] }
phf = { version = "0.11.3", features = ["macros"] }
tracing = "0.1.41"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "usb"
harness = false

[[bench]]
name = "pcie"
harness = false

[[bench]]
name = "cpu_amd"
harness = false

[[bench]]
name = "cpu_intel"
harness = false
