[package]
name = "handlers"
version = "0.1.0"
edition = "2021"

# TODO: remove unneded deps
[dependencies]
databases = { path = "../databases" }
parsing = { path = "../parsing" }
axum = "0.7.4"
log = "0.4.20"
serde = { version = "1.0.195", features = ["derive"] }
tower-http = { version = "0.5.1", features = ["cors"] }