[package]
name = "handlers"
version = "0.1.0"
edition = "2021"

# TODO: remove unneded deps
[dependencies]
databases = { path = "../databases" }
parsing = { path = "../parsing" }
axum = "0.8.1"
serde = { version = "1.0.210", features = ["derive"] }
tower-http = { version = "0.6.0", features = ["cors"] }
tracing = "0.1.40"
