[package]
name = "parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: remove
log = "0.4.22"
nom = "7.1.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
nohash-hasher = "0.2.0"