[package]
name = "hwapi"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsing = { path = "../parsing" }
databases = { path = "../databases" }
handlers = { path = "../handlers" }
axum = { version = "0.7.7", features = ["http2", "tracing"] }
chrono = "0.4.32"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
tower-http = { version = "0.6.0", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
opentelemetry-appender-tracing = "0.25.0"
opentelemetry = "0.25.0"
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", features = ["http-json", "reqwest", "reqwest-client"] }
reqwest = { version = "0.12.7", features = ["multipart"] }
tracing-opentelemetry = "0.26.0"
