[package]
name = "hwapi"
version = "1.2.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsing = { path = "../parsing" }
databases = { path = "../databases" }
handlers = { path = "../handlers" }
axum = { version = "0.8.1", features = ["http2", "tracing"] }
chrono = "0.4.40"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
opentelemetry-appender-tracing = "0.30.0"
opentelemetry = "0.28.0"
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28.0", features = ["http-json", "reqwest", "reqwest-client"] }
reqwest = { version = "0.12.9", features = ["multipart"] }
tracing-opentelemetry = "0.29.0"
